# vislog

./: Cargo.toml  README.md  flake.nix
.github/ISSUE_TEMPLATE/: story-template.md  task-template.md
data/: computer_information_systems_minor.json  courses.json  cs_major.json  cs_minor.json  cybersecurity_major.json  digital_media_major.json  family_studies_major.json  intercultural_strategic_communication.json  parsed_program_requirements_titles.json  programs.json  zoology_major.json
docs/: vislog_architecture.excalidraw
examples/: parse_cs_major.rs
src/: guid.rs  lib.rs
src/deserialization/: course.rs
src/parsing/: course.rs  courses.rs  guid.rs  mod.rs
vislog-core/: Cargo.toml
vislog-core/examples/: parse_cs_major.rs
vislog-core/src/: lib.rs
vislog-core/src/parsing/: courses.rs  guid.rs  mod.rs
vislog-parser/: Cargo.toml
vislog-parser/src/: lib.rs
vislog-server/: .gitignore  Cargo.toml  default-configs.toml  vislog-configs.toml
vislog-server/src/: configs.rs  main.rs
vislog-server/src/data/: fetching.rs  mod.rs
vislog-server/src/data/parsing/: json_providers.rs  mod.rs
vislog-server/src/data/providers/: courses.rs  json_providers.rs  mod.rs  programs.rs
vislog-server/src/web/: error.rs  mod.rs
vislog-server/src/web/api/: error.rs  mod.rs
vislog-server/src/web/api/courses/: error.rs  mod.rs
vislog-server/src/web/api/data/: error.rs  mod.rs
vislog-server/src/web/api/programs/: error.rs  mod.rs
vislog-server/src/web/middleware/: cors.rs
