[package]
name = "vislog-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vislog-parser = { path = "../vislog-parser" }
vislog-core = { path = "../vislog-core" }

serde_json = "1.0.108"
thiserror = "1.0.52"
