[package]
name = "vislog-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vislog-parser = { path = "../vislog-parser" }
vislog-core = { path = "../vislog-core" }

serde_json = "1.0.108"
thiserror = "1.0.52"
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.2", features = ["json"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
